# liteproto

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  basic_message.h  basic_message.hpp  main.cpp  reflection.hpp  type.hpp  utils.hpp
.github/workflows/: linux.yml  linux_gcc8.yml  macos.yml
doc/: proxy.md
example/first_message/: CMakeLists.txt  first_message.cpp
example/variant_visit/: CMakeLists.txt  variant_visit.cpp
include/liteproto/: interface.hpp  iterator.hpp  list.hpp  liteproto.hpp  map.hpp  message.hpp  pair.hpp  reflect.hpp  reflection.hpp  string.hpp  traits.hpp  type.hpp  utils.hpp
include/liteproto/reflect/: number.hpp  object.hpp  proxy.hpp  traits.hpp  type.hpp
include/liteproto/reflection/: object.hpp
include/liteproto/serialize/: resolver.hpp
include/liteproto/static_test/: static_test.hpp
include/liteproto/traits/: basic_traits.hpp  traits.hpp
src/: liteproto.cpp
test/: test.cpp
